<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedule In Time</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About us</string>
    <string name="tab_week_view">Week</string>
    <string name="transparent_panel">back to current week</string>
    <string name="free_time_txt">Not sync</string>
    <string name="year_txt">  Year </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove_event_txt">Remove all event</string>
    <string name="error_diag_title">Connectivity error</string>
    <string name="error_diag_msg">Start parameters?</string>
    <string name="database_updated">Database updated</string>
    <string name="entreprise_txt">Entreprise</string>
    <string name="calendar_updated">Calendar updated</string>
    
    <string name="remove_event_key">remove_event_key</string>

    <!-- Events -->
    <string name="event_progress_diag">Downloading events</string>
    <string name="event_refresh_prog_diag">Refreshing planning</string>
    <!-- EventIntentExtra -->
    <string name="event_intent_formation_id">formationId</string>
    <string name="event_intent_year">year</string>
    <string name="event_intent_week_of_year">weekOfYear</string>
    <string name="event_intent_delete">delete</string>
    <string name="event_intent_number_of_week">numberOfWeek</string>

    <!-- Formation -->
    <string name="formation_chooser_diag">Select your formation</string>
    <string name="formation_progress_diag">Downloading formations</string>
    <!-- FormationIntent -->
    <string name="formation_intent_list_name">formationsName</string>

    <!-- Settings -->
    <string name="title_settings">Global settings</string>
    <string name="refresh_settings">Refresh settings</string>

    <!-- Settings Formation -->
    <string name="formation_title">Formation</string>
    <string name="formation_key">formation_key</string>
    <string name="formation_diag_title">Choose your formation</string>
    <string name="formation_diag_cancel">Cancel</string>

    <!-- Settings AutoStart -->
    <string name="auto_start_title">Auto start</string>
    <string name="auto_start_summary">Refresh planning on boot</string>
    <string name="auto_start_key">auto_start_key</string>

    <!-- Settings Uploading to Calendar -->
    <string name="up_calendar_title">Upload to calendar</string>
    <string name="up_calendar_key">up_calendar_key</string>

    <!-- Settings Frequency -->
    <string name="frequency_title">Synchro Frequency</string>
    <string name="frequency_summary">Refresh planning on boot</string>
    <string name="frequency_key">frequency_key</string>
    <string name="frequency_diag_title">Synchro Frequency</string>
    <string name="frequency_diag_cancel">Cancel</string>
    <!-- Frequency switch -->
    <string name="enable_refresh_key">enable_refresh_key</string>
    <string name="enable_refresh_title">Auto refreshing</string>

</resources>