<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mypref" >

    <PreferenceCategory android:title="@string/title_settings" >
        <SwitchPreference
            android:key="@string/up_calendar_key"
            android:title="@string/up_calendar_title" />

        <ListPreference
            android:dialogTitle="@string/formation_diag_title"
            android:key="@string/formation_key"
            android:negativeButtonText="@string/formation_diag_cancel"
            android:title="@string/formation_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/refresh_settings" >
        <SwitchPreference
            android:key="@string/auto_start_key"
            android:summary="@string/auto_start_summary"
            android:title="@string/auto_start_title" />
        <SwitchPreference
            android:key="@string/enable_refresh_key"
            android:title="@string/enable_refresh_title" />

        <ListPreference
            
            android:dependency="@string/enable_refresh_key"
            android:dialogTitle="@string/frequency_diag_title"
            android:entries="@array/update_freq_options"
            android:entryValues="@array/update_freq_values"
            android:key="@string/frequency_key"
            android:negativeButtonText="@string/frequency_diag_cancel"
            android:title="@string/frequency_title" />
    </PreferenceCategory>

</PreferenceScreen>